--- a/styles.css
+++ b/styles.css
@@ -164,16 +164,18 @@ body {
 }
 
 .hero-title {
-    font-size: 4rem;
+    font-size: 10rem;
     font-weight: 700;
     color: var(--dark);
-    margin-bottom: 10px;
+    margin-bottom: -50px;
+    font-family: fantasy;
 }
 
 .hero-subtitle {
-    font-size: 1.5rem;
+    font-size: 4.3rem;
     color: var(--primary);
     margin-bottom: 30px;
+    font-family: fantasy;
 }
 
 /* Transformation Grid */
