--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,7 @@ body {
     padding: 120px 0 80px;
     background-color: var(--light);
     text-align: center;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(253, 187, 45, 1) 100%);
 }
 
 .hero-content {
